--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/OrdenPago/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/OrdenPago/Anular.cshtml
@@ -159,7 +159,7 @@
         <div class="col-md-12">
             <div class="col-md-3">
                 <div class="form-group">
-                    <label for="IdBanco_acreditacion">Tipo flujo</label>
+                    <label for="IdBanco_acreditacion">Flujo</label>
                     @Html.Partial("_CmbFlujo_OP", Model.IdTipoFlujo)
                     @Html.ValidationMessageFor(q => q.IdTipoFlujo, "", new { @class = "text-danger" })
                 </div>
