--- a/ERP/Core.Erp.Web/Areas/Caja/Views/ConciliacionCaja/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Caja/Views/ConciliacionCaja/Nuevo.cshtml
@@ -539,7 +539,7 @@
                 <div class="row">
                     <div class="col-md-8">
                         <div class="form-group">
-                            <label for="IdTipoFlujo">Tipo flujo*</label>
+                            <label for="IdTipoFlujo">Flujo</label>
                             @Html.Partial("_CmbFlujo_ConciliacionCaja", Model.IdTipoFlujo)
                             @Html.ValidationMessageFor(q => q.IdTipoFlujo, "", new { @class = "text-danger" })
                         </div>
