--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/PuntoVenta/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/PuntoVenta/Modificar.cshtml
@@ -74,6 +74,23 @@
         </div>
     </div>
 
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-12">
+                <div class="form-group">
+                    @Html.DevExpress().CheckBoxFor(q => q.CobroAutomatico,
+                         settings =>
+                         {
+                             settings.Name = "CobroAutomatico";
+                             settings.Checked = false;
+                             settings.Text = "Realiza cobro automático al momento de la venta";
+                         }
+                     ).GetHtml()
+                </div>
+            </div>
+        </div>
+    </div>
+
 
     <div class="box-footer">
         <button type="submit" class="btn btn-primary">Guardar</button>
