--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/PuntoVenta/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/PuntoVenta/Nuevo.cshtml
@@ -73,6 +73,23 @@
         </div>
     </div>
 
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-12">
+                <div class="form-group">
+                    @Html.DevExpress().CheckBoxFor(q => q.CobroAutomatico,
+                         settings =>
+                         {
+                             settings.Name = "CobroAutomatico";
+                             settings.Checked = false;
+                             settings.Text = "Realiza cobro automático al momento de la venta";
+                         }
+                     ).GetHtml()
+                </div>    
+            </div>
+        </div>
+    </div>
+
     <div class="box-footer">
         <button type="submit" class="btn btn-primary">Guardar</button>
         <a class="btn btn-default" href="@Url.Action("Index", "PuntoVenta", new { Area = "Facturacion" }, null)">Cancelar</a>
