--- a/ERP/Core.Erp.Web/Views/Shared/_Layout.cshtml
+++ b/ERP/Core.Erp.Web/Views/Shared/_Layout.cshtml
@@ -57,21 +57,22 @@
             new Script { ExtensionSuite = ExtensionSuite.TreeList }
         )
 </head>
-<body class="skin-green-light layout-top-nav">
+<body class="fixed skin-green-light layout-top-nav">
     <div class="wrapper">
         <header class="main-header">
 
-            <nav class="navbar navbar-inverse navbar-static-top">
+             <nav class="navbar navbar-inverse navbar-static-top" style="font-family: Helvetica Neue, Helvetica, Arial, sans-serif; padding: 0 15px; height: 50px; font-size: 25px;line-height: 50px; font-weight: 300;">
                 <div class="container">
                     <a class="navbar-brand text-center center-block" href="#myModal" data-toggle="modal">
                         <span class="logo-lg"><strong>Fixed</strong> ERP</span>
                     </a>
                 </div>
             </nav>
-            <!-- Logo -->
+             
+                <!-- Logo -->
 
 
-        </header>
+</header>
         <!-- =============================================== -->
         <!-- Content Wrapper. Contains page content -->
         <div class="content-wrapper">
