--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/Modificar.cshtml
@@ -126,12 +126,12 @@
         <div class="col-md-12">
             <div class="col-md-offset-2 col-md-2">
                 <button type="button" class="btn btn-primary form-control" id="btn_imprimir" onclick="ImprimirRIDE();" title="Imprimir">
-                    <i class="fa fa-print"> RIDE</i>
+                    <i class="fa fa-print"></i>  RIDE
                 </button>
             </div>
             <div class="col-md-2">
                 <button type="button" class="btn btn-primary form-control" id="btn_imprimir" onclick="AutorizarSRI();" title="Autorizar SRI">
-                    <i class="fa fa-send"> SRI</i>
+                    <i class="fa fa-send"></i>  SRI
                 </button>
             </div>
 
