--- a/ERP/Core.Erp.Web/Areas/Caja/Views/ConciliacionCaja/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Caja/Views/ConciliacionCaja/Modificar.cshtml
@@ -49,6 +49,27 @@
 
     });
 
+    function Imprimir() {
+        var datos = {
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("ObtenerURL", "Empresa", new { Area = "General" })',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {                
+                var win = window.open(data +"/Reportes/CajaReportes/CAJ_002?IdEmpresa="+@Core.Erp.Web.Helps.SessionFixed.IdEmpresa+"&IdConciliacion_Caja="+@Model.IdConciliacion_Caja, '_blank');
+                win.focus();
+            },
+            error: function (error) {
+            }
+        });
+    }
+
     function MostrarOcultarOP() {
         var Estado = $("#IdEstadoCierre").val();
         if (Estado == "EST_CIE_ABI") {
@@ -383,7 +404,7 @@
                     @Html.ValidationMessageFor(q => q.IdEstadoCierre, "", new { @class = "text-danger" })
                 </div>
             </div>
-            <div class="col-md-offset-6 col-md-2">
+            <div class="col-md-2">
                 <div class="form-group">
                     <label for="Fecha_fin">Fecha*</label>
                     @Html.DevExpress().DateEditFor(q=> q.Fecha, settings =>
@@ -397,6 +418,16 @@
                 }).GetHtml()
                     @Html.ValidationMessageFor(q => q.Fecha, "", new { @class = "text-danger" })
                 </div>
+            </div>
+            <div class="col-md-offset-4 col-md-1">
+                <button type="button" class="btn btn-primary form-control" id="btn_imprimir" onclick="Imprimir();" title="Imprimir">
+                    <i class="fa fa-print"></i>
+                </button>
+            </div>
+            <div class="col-md-1">
+                <a type="button" class="btn btn-primary form-control " href="@Url.Action("Nuevo","ConciliacionCaja",new { Area = "Caja", IdEmpresa = Model.IdEmpresa },null)">
+                    <i class="fa fa-plus"></i>
+                </a>
             </div>
         </div>
     </div>
