--- a/ERP/Core.Erp.Web/Areas/Banco/Views/NotaDeCreditoBanco/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/NotaDeCreditoBanco/Modificar.cshtml
@@ -81,6 +81,16 @@
                     </div>
                 </div>
             </div>
+            <div class="col-md-1">
+                <button type="button" class="btn btn-primary form-control" id="btn_imprimir" onclick="Imprimir();" title="Imprimir">
+                    <i class="fa fa-print"></i>
+                </button>
+            </div>
+            <div class="col-md-1">
+                <a type="button" class="btn btn-primary form-control " href="@Url.Action("Nuevo","NotaDeCreditoBanco",new { Area = "Banco", IdEmpresa = Model.IdEmpresa },null)">
+                    <i class="fa fa-plus"></i>
+                </a>
+            </div>
         </div>
     </div>
 
@@ -293,5 +303,26 @@ function GetListBancoPorSucursal() {
             }
         });
         GridView_comprobante_detalle.PerformCallback();
+    }
+
+    function Imprimir() {
+        var datos = {
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("ObtenerURL", "Empresa", new { Area = "General" })',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {                
+                var win = window.open(data +"/Reportes/BancoReportes/BAN_002?IdEmpresa="+@Core.Erp.Web.Helps.SessionFixed.IdEmpresa+"&IdTipocbte="+@Model.IdTipocbte+"&IdCbteCble="+@Model.IdCbteCble, '_blank');
+                win.focus();
+            },
+            error: function (error) {
+            }
+        });
     }
 </script>
