--- a/ERP/Core.Erp.Web/Areas/Caja/Views/CajaMovimientoEgreso/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Caja/Views/CajaMovimientoEgreso/Modificar.cshtml
@@ -155,7 +155,7 @@
                     @Html.ValidationMessageFor(q => q.CodMoviCaja, "", new { @class = "text-danger" })
                 </div>
             </div>
-            <div class="col-md-offset-7 col-md-2">
+            <div class="col-md-2">
                 <div class="form-group">
                     <label for="">Fecha</label>
                     <div class="input-group date">
@@ -174,6 +174,16 @@
                         @Html.ValidationMessageFor(q => q.cm_fecha, "", new { @class = "text-danger" })
                     </div>
                 </div>
+            </div>
+            <div class="col-md-offset-5 col-md-1">
+                <button type="button" class="btn btn-primary form-control" id="btn_imprimir" onclick="Imprimir();" title="Imprimir">
+                    <i class="fa fa-print"></i>
+                </button>
+            </div>
+            <div class="col-md-1">
+                <a type="button" class="btn btn-primary form-control " href="@Url.Action("Nuevo","CajaMovimientoEgreso",new { Area = "Caja", IdEmpresa = Model.IdEmpresa },null)">
+                    <i class="fa fa-plus"></i>
+                </a>
             </div>
         </div>
     </div>
@@ -295,7 +305,6 @@
     }
 }
 <script>
-
     $("#IdTipoPersona").change(function () {
         IdEntidad.SetValue(null);
     });
@@ -343,6 +352,27 @@
                             }
                         });
                     }
+
+    function Imprimir() {
+        var datos = {
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("ObtenerURL", "Empresa", new { Area = "General" })',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {                
+                var win = window.open(data +"/Reportes/CajaReportes/CAJ_001?IdEmpresa="+@Core.Erp.Web.Helps.SessionFixed.IdEmpresa+"&IdTipocbte="+@Model.IdTipocbte+"&IdCbteCble="+@Model.IdCbteCble, '_blank');
+                win.focus();
+            },
+            error: function (error) {
+            }
+        });
+    }
 
     function OnSelectedCtaCbleChanged() {
         GridView_comprobante_detalle.GetEditor("IdGrupoPresupuesto").PerformCallback();
