--- a/ERP/Core.Erp.Web/Areas/Caja/Views/CajaMovimientoEgreso/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Caja/Views/CajaMovimientoEgreso/Nuevo.cshtml
@@ -162,7 +162,7 @@
                     @Html.ValidationMessageFor(q => q.CodMoviCaja, "", new { @class = "text-danger" })
                 </div>
             </div>
-            <div class="col-md-offset-7 col-md-2">
+            <div class="col-md-2">
                 <div class="form-group">
                     <label for="">Fecha</label>
                     <div class="input-group date">
@@ -170,14 +170,14 @@
                             <i class="fa fa-calendar"></i>
                         </div>
                         @Html.DevExpress().DateEditFor(q => q.cm_fecha, settings =>
-{
-    settings.Name = "cm_fecha";
-    settings.Properties.UseMaskBehavior = true;
-    settings.Properties.EditFormat = EditFormat.Date;
-    settings.Properties.EditFormatString = "dd/MM/yyyy";
-    settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
-    settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-}).GetHtml()
+                        {
+                            settings.Name = "cm_fecha";
+                            settings.Properties.UseMaskBehavior = true;
+                            settings.Properties.EditFormat = EditFormat.Date;
+                            settings.Properties.EditFormatString = "dd/MM/yyyy";
+                            settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                            settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                        }).GetHtml()
                         @Html.ValidationMessageFor(q => q.cm_fecha, "", new { @class = "text-danger" })
                     </div>
                 </div>
