--- a/ERP/Core.Erp.Web/Areas/Caja/Views/CajaMovimientoIngreso/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Caja/Views/CajaMovimientoIngreso/Nuevo.cshtml
@@ -62,7 +62,7 @@
                     @Html.ValidationMessageFor(q => q.CodMoviCaja, "", new { @class = "text-danger" })
                 </div>
             </div>
-            <div class="col-md-offset-7 col-md-2">
+            <div class="col-md-2">
                 <div class="form-group">
                     <label for="">Fecha</label>
                     <div class="input-group date">
