--- a/ERP/Core.Erp.Web/Areas/Caja/Views/ConciliacionCaja/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Caja/Views/ConciliacionCaja/Nuevo.cshtml
@@ -370,7 +370,7 @@
                     @Html.ValidationMessageFor(q => q.IdEstadoCierre, "", new { @class = "text-danger" })
                 </div>
             </div>
-            <div class="col-md-2">
+            <div class="col-md-offset-6 col-md-2">
                 <div class="form-group">
                     <label for="Fecha_fin">Fecha*</label>
                     @Html.DevExpress().DateEditFor(q=> q.Fecha, settings =>
